fixes for narrow flip windows; form validation for search / jump box

--- a/pt/web/sass/volume.scss
+++ b/pt/web/sass/volume.scss
@@ -4,3 +4,13 @@
 @import "volume/scroll.scss";
 @import "volume/flip.scss";
 @import "volume/plaintext.scss";
+
+.alert-headline {
+    text-align: center;
+
+    >p {
+        font-size: 200%;
+        font-weight: bold;
+    }
+
+}
