--- a/pt/web/sass/volume/flip.scss
+++ b/pt/web/sass/volume/flip.scss
@@ -234,7 +234,7 @@
 }
 
 .view-2up .page-item {
-    min-width: auto;
+    min-width: inherit;
     height: 98%;
 }
 
